# libedit

./: CMakeLists.txt  ChangeLog  Makefile.in  aclocal.m4  config.h.cmake  configure  configure.ac
.github/workflows/: cmake.yml
doc/: Makefile.in
examples/: Makefile.in  fileman.c  wtc1.c
src/: Makefile.am  Makefile.in  el.c  filecomplete.c  histedit.h  history.c  readline.c  reallocarr.c  sys.h  vis.c
